--- a/webapp/shamat/LimeApp/view/App.view.xml
+++ b/webapp/shamat/LimeApp/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="shamatShamatLime.controller.App" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc"
+<mvc:View controllerName="shamat.LimeApp.controller.App" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc"
 	displayBlock="true" xmlns="sap.m">
 	<App>
 		<pages>
