--- a/webapp/shamat/LimeApp/view/App.view.xml
+++ b/webapp/shamat/LimeApp/view/App.view.xml
@@ -1,18 +1,137 @@
 <mvc:View controllerName="shamat.LimeApp.controller.App" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc"
-	displayBlock="true" xmlns="sap.m" xmlns:l="sap.ui.layout">
+	displayBlock="true" xmlns="sap.m" xmlns:layout="sap.ui.layout" xmlns:core="sap.ui.core">
 	<App>
-		<pages>
-			<Page title="{i18n>title}">
-				<content>
-					<l:VerticalLayout width="100%">
-						<l:content>
-							<Label text="Warnings"></Label>
-							<Label text="Channels"></Label>
-							<Label text="Campaings"></Label>
-						</l:content>
-					</l:VerticalLayout>
-				</content>
-			</Page>
-		</pages>
+		<Page title="LimeApp" showHeader="false" enableScrolling="false">
+			<content>
+				<layout:HorizontalLayout class="sapUiSmallMargin">
+					<layout:content>
+						<layout:VerticalLayout width="100%">
+							<layout:content>
+								<!-- Menu -->
+								<OverflowToolbar id="toolbar" width="100%">
+									<Button id="overviewButton" text="Overview" type="Transparent" press="onButtonAction">
+										<customData>
+											<core:CustomData key="target" value="overview"/>
+										</customData>
+									</Button>
+									<MenuButton text="Channels" buttonMode="Split" useDefaultActionOnly="true">
+										<menu>
+											<Menu itemSelected="onMenuAction">
+												<items>
+													<MenuItem id="twitterMeuItemId" text="Twitter"/>
+													<MenuItem id="facebookMenuItemId" text="Facebook"/>
+												</items>
+												<customData>
+													<core:CustomData key="target" value="channels"/>
+												</customData>
+											</Menu>
+										</menu>
+									</MenuButton>
+									<MenuButton text="Campaigns" buttonMode="Split" useDefaultActionOnly="true">
+										<menu>
+											<Menu itemSelected="onMenuAction">
+												<items>
+													<MenuItem id="campaign1MenuItemId" text="Campaign 1"/>
+													<MenuItem id="campaign2MenuItemId" text="Campaign 2"/>
+												</items>
+												<customData>
+													<core:CustomData key="target" value="campaings"/>
+												</customData>
+											</Menu>
+										</menu>
+									</MenuButton>
+								</OverflowToolbar>
+								<!-- Navigation container -->
+								<NavContainer id="navContainerId" width="98%" height="36em" class="navContainerControl sapUiSmallMarginBottom">
+									<!-- Overview -->
+									<ScrollContainer id="overview" height="100%" width="100%" horizontal="false" vertical="true" focusable="true">
+										<!-- Warnings -->
+										<Panel id="warningsPanel" width="auto" class="sapUiResponsiveMargin">
+											<headerToolbar>
+												<Toolbar height="3rem">
+													<Title text="Warnings"/>
+												</Toolbar>
+											</headerToolbar>
+											<content>
+												<TileContainer id="warningsTile" width="100%" height="300px" tiles="{/Warnings}">
+													<tiles>
+														<CustomTile class="sapSTile">
+															<content>
+																<Text text="{Title}"/>
+																<Text text="{Description}"/>
+															</content>
+														</CustomTile>
+													</tiles>
+												</TileContainer>
+											</content>
+										</Panel>
+										<!-- Channels -->
+										<Panel id="channelsPanel" width="auto" class="sapUiResponsiveMargin">
+											<headerToolbar>
+												<Toolbar height="3rem">
+													<Title text="Channels"/>
+												</Toolbar>
+											</headerToolbar>
+											<content>
+												<TileContainer id="channelsTile" width="100%" height="300px" tiles="{/Channels}">
+													<tiles>
+														<CustomTile>
+															<layout:VerticalLayout width="100%">
+																<layout:content>
+																	<Label text="{Title}"/>
+																	<Label text="{AlertCount}">
+																		<customData>
+																			<core:CustomData key="alert-status" value="{AlertStatus}" writeToDom="true"/>
+																		</customData>
+																	</Label>
+																</layout:content>
+															</layout:VerticalLayout>
+														</CustomTile>
+													</tiles>
+												</TileContainer>
+											</content>
+										</Panel>
+										<!-- Campaigns -->
+										<Panel id="campaignsPanel" width="auto" class="sapUiResponsiveMargin">
+											<headerToolbar>
+												<Toolbar height="3rem">
+													<Title text="Campaigns"/>
+												</Toolbar>
+											</headerToolbar>
+											<content>
+												<TileContainer id="campaignsTile" width="100%" height="300px" tiles="{/Campaigns}">
+													<tiles>
+														<CustomTile class="sapSTile">
+															<content>
+																<Text text="{Title}"/>
+																<Text text="{Description}"/>
+															</content>
+														</CustomTile>
+													</tiles>
+												</TileContainer>
+											</content>
+										</Panel>
+									</ScrollContainer>
+									<!-- Channels -->
+									<ScrollContainer id="channels"></ScrollContainer>
+									<!-- Campaigns -->
+									<ScrollContainer id="campaigns"></ScrollContainer>
+								</NavContainer>
+							</layout:content>
+						</layout:VerticalLayout>
+						<!-- Alerts -->
+						<List headerText="{i18n>alertsHeaderText}" id="alertList" items="{/Alerts}" noDataText="{i18n>alertsNoDataText}">
+							<items>
+								<ObjectListItem number="{ path: 'Date', type: 'sap.ui.model.type.DateTime', formatOptions: { style: 'medium' } }" title="{Title}">
+									<attributes>
+										<ObjectAttribute text="{Description}"/>
+									</attributes>
+								</ObjectListItem>
+							</items>
+						</List>
+					</layout:content>
+				</layout:HorizontalLayout>
+			</content>
+		</Page>
 	</App>
 </mvc:View>
